--- a/styles/global.css
+++ b/styles/global.css
@@ -1,4 +1,11 @@
 /* ./styles/globals.css */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+* {
+	font-family: "Inter", sans-serif;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
