--- a/styles/global.css
+++ b/styles/global.css
@@ -1,11 +1,13 @@
 /* ./styles/globals.css */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+@import 'tailwindcss/base';
+
+@import 'tailwindcss/components';
+@import './button.css';
+
+@import 'tailwindcss/utilities';
+
 * {
-	font-family: "Inter", sans-serif;
+  font-family: 'Inter', sans-serif;
 }
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
