Added discord colour on hover to community button and made it target blank

--- a/styles/button.css
+++ b/styles/button.css
@@ -3,5 +3,5 @@
 }
 
 .btn-primary {
-  @apply rounded-full rounded-bl-none bg-gray-900 text-white font-medium shadow-2xl hover:shadow-md transform hover:translate-y-1 translate-x-0;
+  @apply rounded-full rounded-bl-none bg-gray-900 hover:bg-[#7289DA] text-white font-medium shadow-2xl hover:shadow-md transform hover:translate-y-1 translate-x-0;
 }
