--- a/styles/global.css
+++ b/styles/global.css
@@ -14,3 +14,23 @@ h5,
 h6 {
   @apply font-heading;
 }
+
+.bg-theme {
+  background: rgb(68, 18, 115);
+  background: linear-gradient(
+    34deg,
+    rgba(68, 18, 115, 1) 0%,
+    rgba(5, 30, 75, 1) 21%,
+    rgba(52, 79, 141, 1) 58%,
+    rgba(106, 137, 223, 1) 80%,
+    rgba(145, 227, 226, 1) 99%
+  );
+}
+
+.hov-bg-theme:hover {
+  box-shadow: 0 0 35px rgba(255, 255, 255, 0.8);
+}
+
+.text-theme {
+  color: #60a5fa;
+}
