--- a/styles/global.css
+++ b/styles/global.css
@@ -32,5 +32,11 @@ h6 {
 }
 
 .text-theme {
-  color: #60a5fa;
+  color: #bad6fc;
+}
+
+@media (min-width: 768px) {
+  .text-theme {
+    color: #60a5fa;
+  }
 }
