--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -112,4 +112,8 @@ img {
 .btn-twitter {
   @apply translate-x-0 transform rounded-full rounded-bl-none bg-gray-900 font-medium text-white shadow-2xl hover:translate-y-1 hover:bg-[rgb(29,161,242)] hover:shadow-md;
 }
+#get-projects-scroll{
+  overflow: hidden;
+
+}
 
