--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -118,6 +118,14 @@ h6 {
   @apply translate-x-0 transform rounded-full rounded-bl-none bg-gray-900 font-medium text-white shadow-2xl hover:translate-y-1 hover:bg-[rgb(29,161,242)] hover:shadow-md;
 }
 
+#multiselectContainerReact .searchWrapper{
+  @apply border-none;
+}
+
+#multiselectContainerReact .searchWrapper input{
+  @apply placeholder:text-slate-700 text-white font-bold;
+}
+
 #get-projects-scroll{
   overflow: hidden;
 
