FAQ - Global.css

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -114,11 +114,7 @@ h6 {
 }
 
 .details summary::after {
-  content: ">";
-}
-
-.details[open] summary::after {
-  @apply rotate-[270deg];
+  content: "^";
 }
 
 .headTitle {
