--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -113,9 +113,9 @@ h6 {
   }
 }
 
-.details summary::after {
-  content: "^";
-}
+/* .details summary::after {
+  content: ">";
+} */
 
 
 .headTitle {
