styled custom scroll bar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -157,3 +157,17 @@ h6 {
   height: auto;
   width: 56px;
 }
+
+::-webkit-scrollbar {
+  width: 12px; /* Width of the scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1; /* Color of the track */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #7aace0 ; /* Color of the scroll thumb */
+  border-radius: 13px;
+
+}
